# gpu-resident-inference-lab

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cuda/: CMakeLists.txt  persistent_decode_stub.cu  request_desc.h
cuda/examples/: diffusion_refinement_megakernel_sketch.cu  warp_specialized_block_pipeline_sketch.cu
cuda/include/: kernel_status.h  kv_page_table.h  queue_desc.h  request_desc.h  research_kernel_metrics.h  stage_commit.cuh  stage_decode.cuh  stage_kv.cuh  stage_prefill.cuh  stage_scheduler.cuh  stage_sparse_kv_select.cuh  stage_spec_verify.cuh
cuda/src/: baseline_host_decode_kernel.cu  compacted_decode_kernel.cu  dma_aware_kv_movement_planner_kernel.cu  host_launcher.cpp  kv_prefetch_planner_kernel.cu  kv_pressure_eviction_kernel.cu  kv_tier_residency_kernel.cu  resident_scheduler_kernel.cu  resident_sparse_decode_pipeline_kernel.cu  sparse_kv_gather_kernel.cu  tiered_kv_staging_kernel.cu  trace_replay_admission_kernel.cu  verify_commit_kernel.cu  xl_persistent_megakernel.cu
docs/: ARCHITECTURE.md  BLOG.md  CUDA_STAGING.md  DECISIONS_PER_SECOND_AGENDA.md  REASONING_METRICS_STUB.md  REASONING_PIPELINE.md  ROADMAP.md  SPECULATIVE_REASONING_SYSTEM.md  diffusion-sketch.html  index.html
ds-benchmark/: README.md  compare_runs.py  decisions_benchmark.py  ds_scorer.py  requirements.txt  runner.py  task_loader.py
examples/: block_speculative_demo.py
scripts/: check_claims.py  compare_metrics.py  summarize_cuda_results.py
src/megakernel_lab/: __init__.py  backend.py  bench.py  block_runtime.py  block_spec_decode.py  config.py  demo.py  kv_cache.py  runtime.py  sparse_kv.py  spec_decode.py  state.py  swa_state.py  token_state.py
tests/: test_asbs.py  test_bench.py  test_block_runtime.py  test_block_spec_decode.py  test_check_claims.py  test_cuda_staging.py  test_kv_cache.py  test_runtime.py  test_sparse_kv.py  test_spec_kv.py  test_swa_state.py  test_token_state.py
tiered-kv-cache/: benchmark_cache.py  compression.py  prefetch_scheduler.py  requirements.txt  tiered_kv_cache.py
tools/: reasoning_metrics_stub.py
unified-pipeline/: README.md  _bootstrap.py  ablation.py  benchmark_suite.py  compare_benchmarks.py  pipeline.py  pipeline_config.py  report_generator.py  requirements.txt  run_benchmark.py  run_pipeline.py
